; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/extr_tango-ir.c_tango_ir_handle_rc5.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/extr_tango-ir.c_tango_ir_handle_rc5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tango_ir = type { i32, i64 }

@IR_RC5_DATA = common dso_local global i64 0, align 8
@RC_PROTO_RC5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tango_ir*)* @tango_ir_handle_rc5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tango_ir_handle_rc5(%struct.tango_ir* %0) #0 {
  %2 = alloca %struct.tango_ir*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.tango_ir* %0, %struct.tango_ir** %2, align 8
  %9 = load %struct.tango_ir*, %struct.tango_ir** %2, align 8
  %10 = getelementptr inbounds %struct.tango_ir, %struct.tango_ir* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @IR_RC5_DATA, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @readl_relaxed(i64 %13)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @BIT(i32 31)
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %1
  br label %46

20:                                               ; preds = %1
  %21 = load i32, i32* %3, align 4
  %22 = ashr i32 %21, 12
  %23 = and i32 %22, 1
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %3, align 4
  %25 = ashr i32 %24, 11
  %26 = and i32 %25, 1
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %3, align 4
  %28 = ashr i32 %27, 6
  %29 = and i32 %28, 31
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %3, align 4
  %31 = and i32 %30, 63
  %32 = load i32, i32* %4, align 4
  %33 = xor i32 %32, 1
  %34 = shl i32 %33, 6
  %35 = or i32 %31, %34
  store i32 %35, i32* %7, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @RC_SCANCODE_RC5(i32 %36, i32 %37)
  store i32 %38, i32* %8, align 4
  %39 = load %struct.tango_ir*, %struct.tango_ir** %2, align 8
  %40 = getelementptr inbounds %struct.tango_ir, %struct.tango_ir* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* @RC_PROTO_RC5, align 4
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* %5, align 4
  %45 = call i32 @rc_keydown(i32 %41, i32 %42, i32 %43, i32 %44)
  br label %46

46:                                               ; preds = %20, %19
  ret void
}

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @RC_SCANCODE_RC5(i32, i32) #1

declare dso_local i32 @rc_keydown(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
